--- a/index.html
+++ b/index.html
@@ -7,18 +7,55 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Scroll-Activated Animations</h1>
-    <ol id="myList">
-      <li>One</li>
-      <li>Two</li>
-      <li>Three</li>
-      <li>Four</li>
-      <li>Five</li>
-      <li>Six</li>
-      <li>Seven</li>
-      <li>Eight</li>
-      <li>Nine</li>
-      <li>Ten</li>
+    <h1>Scroll Down</h1>
+    <p class="para1">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis
+      massa a arcu efficitur suscipit vehicula et risus.
+    </p>
+    <ol>
+      <li>Nam sagittis est non enim ultrices elementum.</li>
+      <li>Sed id ligula sed mi tempor ornare.</li>
+      <li>
+        Aenean feugiat risus eget sagittis volutpat. Proin quis orci a metus
+        lacinia auctor eget id nisi.
+      </li>
+      <li>Donec pulvinar nunc feugiat semper consequat.</li>
+      <li>
+        Etiam cursus justo eget libero gravida, nec faucibus mauris posuere.
+      </li>
+      <li>In nec sem id libero egestas cursus vel a urna.</li>
+      <li>
+        Fusce pulvinar arcu eu lobortis egestas. Maecenas eleifend felis ut urna
+        consectetur, et pellentesque mi molestie.
+      </li>
+      <li>Aliquam ut felis venenatis, dapibus ante non, gravida nulla.</li>
+      <li>
+        Donec consectetur quam in urna commodo, sed aliquet metus vehicula.
+      </li>
+      <li>Mauris eget est sit amet felis eleifend sagittis non id nulla.</li>
     </ol>
+    <div class="div1">
+      <p>
+        Phasellus tortor nisl, dapibus at posuere sed, tempor in massa.
+        Pellentesque eu sodales orci, finibus congue libero. Mauris molestie
+        bibendum posuere.
+      </p>
+    </div>
+
+    <div class="div2">
+      <p>
+        Nunc blandit varius sapien quis ultrices. Vestibulum et consequat augue.
+        Pellentesque et maximus nisl, sit amet dictum ante.
+      </p>
+    </div>
+
+    <div class="div3">
+      <p>
+        Nullam magna augue, consequat eu augue ut, volutpat fringilla est. Ut
+        commodo ac magna vulputate dictum.
+      </p>
+    </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
